[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
sqlx-macros = { version = "0.6.3" }
config = "0.13.3"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.4"
unicode-segmentation = "1.10.1"
validator = "0.16.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.40"

#[target.x86_64-unknown-linux-gnu]
#rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
claims = "0.7.1"
fake = "2.5.0"
linkify = "0.9.0"
once_cell = "1.17.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand_core = "0.6.4"
serde_json = "1.0.96"
wiremock = "0.5.18"
